<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".ui.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="469dp"
        android:layout_height="108dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:text="@string/create_an_account"
            android:textColor="@color/colorWhite"
            android:textSize="25dp" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/enter_LastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="@dimen/et_padding"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_FirstName" />

    <EditText
        android:id="@+id/enter_EmailID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/et_hint_email_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="@dimen/et_padding"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_LastName" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/et_hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="@dimen/et_padding"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_EmailID" />

    <EditText
        android:id="@+id/enter_ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/et_hint_confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="@dimen/et_padding"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_password" />

    <EditText
        android:id="@+id/enter_FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="@dimen/et_padding"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register_activity" />

    <CheckBox
        android:id="@+id/cb_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:alpha="0.5"
        android:text="@string/i_agree_to_the_terms_and_condition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/already_have_an_account"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>